--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2021"
 ndarray = "0.15.6"
 num-bigint = "0.4"
 num-traits = "0.2"
-ndarray-linalg = "0.16.0"
+ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
