--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ ndarray = "0.15.6"
 num-bigint = "0.4"
 num-traits = "0.2"
 ndarray-linalg = { version = "0.16.0", features = ["openblas"] }
+plotters = "0.3.5"
+rand = "0.8.5"
